--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ToDoList</title>
   </head>
   <body>
-    <div class="time"></div>
+    <div class="time"><span class="time__span"></span></div>
     <div class="name">
       <form class="name__form">
         <input
@@ -20,6 +20,7 @@
     </div>
     <div class="todolist"></div>
     <script src="main.js"></script>
+    <script src="bg.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
