--- a/index.html
+++ b/index.html
@@ -18,9 +18,38 @@
       </form>
       <i class="fas fa-undo fa-sm btn-undo"></i>
     </div>
-    <div class="todolist"></div>
+    <div class="todolist">
+      <table class="todolist__todo">
+        <thead>
+          <tr>
+            <td>To do</td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <form class="todolist__form">
+                <input
+                  type="text"
+                  placeholder="Add task"
+                  id="todolist__text"
+                  maxlength="35"
+                />
+              </form>
+            </td>
+          </tr>
+        </thead>
+        <tbody class="todolist__tbody"></tbody>
+      </table>
+      <table class="todolist__done">
+        <thead>
+          <tr>
+            <td>Undo</td>
+          </tr>
+        </thead>
+        <tbody class="done__tbody"></tbody>
+      </table>
+    </div>
     <script src="main.js"></script>
-    <script src="bg.js"></script>
+    <!-- <script src="bg.js"></script> -->
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
