--- a/index.html
+++ b/index.html
@@ -7,47 +7,58 @@
     <title>ToDoList</title>
   </head>
   <body>
-    <div class="time"><span class="time__span"></span></div>
-    <div class="name">
-      <form class="name__form">
-        <input
-          type="text"
-          placeholder="Type your name here"
-          class="name__inputName"
-        />
-      </form>
-      <i class="fas fa-undo fa-sm btn-undo"></i>
+    <div>
+      <span class="js-weather"></span>
     </div>
-    <div class="todolist">
-      <table class="todolist__todo">
-        <thead>
-          <tr>
-            <td>To do</td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <form class="todolist__form">
-                <input
-                  type="text"
-                  placeholder="Add task"
-                  id="todolist__text"
-                  maxlength="35"
-                />
-              </form>
-            </td>
-          </tr>
-        </thead>
-        <tbody class="todolist__tbody"></tbody>
-      </table>
-      <table class="todolist__done">
-        <thead>
-          <tr>
-            <td>Undo</td>
-          </tr>
-        </thead>
-        <tbody class="done__tbody"></tbody>
-      </table>
+    <div>
+      <div class="time"><span class="time__span"></span></div>
+
+      <div>
+        <div class="name">
+          <form class="name__form">
+            <input
+              type="text"
+              placeholder="Type your name here"
+              class="name__inputName"
+              maxlength="10"
+            />
+          </form>
+          <i class="fas fa-undo fa-sm btn-undo"></i>
+        </div>
+        <div class="todolist">
+          <table class="todolist__todo">
+            <thead>
+              <tr>
+                <td>To do</td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <form class="todolist__form">
+                    <input
+                      type="text"
+                      placeholder="Add task"
+                      id="todolist__text"
+                      maxlength="35"
+                    />
+                  </form>
+                </td>
+              </tr>
+            </thead>
+            <tbody class="todolist__tbody"></tbody>
+          </table>
+          <table class="todolist__done">
+            <thead>
+              <tr>
+                <td>Done</td>
+              </tr>
+            </thead>
+            <tbody class="done__tbody"></tbody>
+          </table>
+        </div>
+      </div>
+      <div></div>
     </div>
+    <div></div>
     <script src="main.js"></script>
     <!-- <script src="bg.js"></script> -->
     <script
@@ -55,5 +66,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="todolist.js"></script>
+    <script src="wather.js"></script>
   </body>
 </html>
